# Keyboard-Maestro-MCP-2

./: .gitignore  .mcp.json  .pre-commit-config.yaml  ARG005_FIX_REPORT.md  CLAUDE.md  DYNAMIC_REGISTRATION.md  LICENSE  README.md  S311_RESOLUTION_REPORT.md  bulk_fix_imports.py  final_f821_cleanup.py  fix_analytics_s311.py  fix_any_imports.py  fix_any_targeted.py  fix_contract_parameters.py  fix_docstring_any.py  fix_docstring_imports.py  fix_except_patterns.py  fix_final_annotations.py  fix_function_arguments.py  fix_imports_simple.py  fix_mock_annotations.py  fix_mock_imports.py  fix_multiline_contracts.py  fix_s311_simple.py  fix_s311_violations.py  fix_test_annotations.py  fix_type_annotations.py  fix_typing_imports.py  pyproject.toml  s110_issues.json  verify_modular.py
development/: COVERAGE_IMPROVEMENT_PLAN.md  LINTING_AND_COVERAGE_IMPROVEMENTS.md  TODO.md  TODO__UPDATED__2025-07-11_07-22-03.md
development/agents/: AGENT_1__ACTIVE__2025-07-11_03-01-45__P1_LINTER_FIX.md  AGENT_2__COMPLETE__2025-07-10_22-43-11__VERIFIED_COMPLETE.md  AGENT_3__ACTIVE__2025-07-11_08-36-28__P1_LINTER_FIXES.md
development/protocols/: FASTMCP_PYTHON_PROTOCOL.md  KM_MCP.md
development/tasks/: TASK_10.md  TASK_100__IN_PROGRESS__2025-07-09_12-42-52__75PCT.md  TASK_101.md  TASK_102__IN_PROGRESS__2025-07-09_12-42-52__75PCT.md  TASK_103.md  TASK_104__NOT_STARTED__2025-07-09_12-42-52__0PCT.md  TASK_105__COMPLETE__2025-07-09_12-42-52__100PCT.md  TASK_106.md  TASK_107__NOT_STARTED__2025-07-09_12-42-52__0PCT.md  TASK_108.md  TASK_108__NOT_STARTED__2025-07-09_12-42-52__0PCT.md  TASK_109__IN_PROGRESS__2025-07-09_12-42-52__75PCT.md  TASK_113.md  TASK_113__IN_PROGRESS__2025-07-09_12-42-52__75PCT.md  TASK_114__NOT_STARTED__2025-07-09_12-42-52__0PCT.md  TASK_115.md  TASK_116.md  TASK_117__COMPLETE__2025-07-09_12-42-52__100PCT.md  TASK_118__COMPLETE__2025-07-09_12-42-52__100PCT.md  TASK_11__COMPLETE__2025-07-09_12-42-52__100PCT.md  TASK_12.md  TASK_120__COMPLETE__2025-07-09_12-42-52__100PCT.md  TASK_124__NOT_STARTED__2025-07-09_12-42-52__0PCT.md  TASK_126__IN_PROGRESS__2025-07-09_12-42-52__75PCT.md  TASK_127.md  TASK_13.md  TASK_130__IN_PROGRESS__2025-07-09_12-42-52__75PCT.md  TASK_131.md  TASK_132__COMPLETE__2025-07-09_12-42-52__100PCT.md  TASK_133.md  TASK_134__COMPLETE__2025-07-09_12-42-52__100PCT.md  TASK_135.md  TASK_136__IN_PROGRESS__2025-07-09_12-42-52__75PCT.md  TASK_137__IN_PROGRESS__2025-07-09_12-42-52__75PCT.md  TASK_138.md  TASK_139.md  TASK_140__NOT_STARTED__2025-07-09_12-42-52__0PCT.md  TASK_141__NOT_STARTED__2025-07-09_12-42-52__0PCT.md  TASK_142__NOT_STARTED__2025-07-09_12-42-52__0PCT.md  TASK_143.md  (+133 more)
docs/: MCP_USAGE_GUIDE.md  km_mcp_audit_report.md  km_mcp_tool_status.md
docs/ai/: AI_INFRASTRUCTURE_SETUP.md  MIGRATION_GUIDE.md
docs/quality/: FORMATTING_STANDARDS.md  QUALITY_RESOLUTION_REPORT.md
examples/: mcp_server_permissions.py  permission_examples.py
examples/plugin_action_demo/: README.md  build_wait_for_button_action.py
examples/ui_inspector/: README.md  UI_Inspector.kmmacros  build_kmmacros.py  click_button_by_title.py
models/: .integrity_key
scripts/: capture_km_action_templates.py  fix_test_return_types.py
specs/: exercise-km-tools.md  km-mcp-catalog-search-cleanup.md  km_build_plugin_action_tool.md  km_mcp_fix_broken_tools_20260514.md  km_mcp_full_smoke_20260512.md  km_mcp_pr2_switch_and_templates.md  km_mcp_resmoke_fixed8.md  km_mcp_resmoke_round2.md  km_mcp_smoke_20260514.md  km_mcp_smoke_audit.md  km_mcp_smoke_round8.md  km_trigger_crud.md  merge-worktrees-into-main.md  mypy-src-clean.md  quality-gate-pass.md  r9-defect-fixes.md  replace-action-catalog.md  round4_followups.md  ruff-cleanup-whole-codebase.md  scope-trim.md  showcase_macro.md  ui_button_clicker_macro.md  wait_for_button_macro.md
src/: __init__.py  main.py  main_dynamic.py  main_original.py  server_backup.py  server_modular.py  server_utils.py
src/accessibility/: assistive_tech_integration.py  compliance_validator.py  report_generator.py  testing_framework.py
src/actions/: __init__.py  action_builder.py  action_registry.py
src/agents/: __init__.py  agent_manager.py  communication_hub.py  decision_engine.py  goal_manager.py  learning_system.py  resource_optimizer.py  safety_validator.py  self_healing.py
src/ai/: batch_processing.py  caching_system.py  context_awareness.py  cost_optimization.py  image_analyzer.py  intelligent_automation.py  model_manager.py  security_validator.py  text_processor.py
src/analytics/: __init__.py  anomaly_detector.py  dashboard_generator.py  failure_predictor.py  insight_generator.py  metrics_collector.py  (+11 more)
tests/: TESTING.md  TESTING_AUTOMATION_TOOLS__FAILING__26-2285__2025-07-10_18-43-07.md  TESTING__VALIDATION_COMPLETE__2025-07-10_18-47-07.md  __init__.py  conftest.py  test_advanced_coverage_expansion.py  test_ai_intelligent_automation_massive.py  test_analytics_comprehensive.py.disabled  test_async_coverage_boost.py  test_autonomous_agents.py  test_breakthrough_28_percent.py  test_commands_comprehensive.py  test_comprehensive_coverage_boost.py  test_comprehensive_coverage_push.py  test_constants.py  test_core_basic_coverage.py  test_core_comprehensive.py  test_core_comprehensive_coverage.py  test_core_control_flow_massive.py  test_core_infrastructure_expansion.py  test_core_iot_architecture_massive.py  test_core_mcp_tools.py.disabled  test_core_types_comprehensive.py  test_coverage_expansion.py  test_coverage_expansion_final.py  test_coverage_expansion_phase10.py  test_coverage_expansion_phase11.py  test_coverage_expansion_phase12.py  test_coverage_expansion_phase13.py  test_coverage_expansion_phase14.py  test_coverage_expansion_phase15.py  test_coverage_expansion_phase16.py  test_coverage_expansion_phase17.py  test_coverage_expansion_phase18.py  test_coverage_expansion_phase19.py  test_coverage_expansion_phase2.py  test_coverage_expansion_phase20.py  test_coverage_expansion_phase21.py  test_coverage_expansion_phase22.py  test_coverage_expansion_phase23.py  (+113 more)
(+619 files in other folders)
