[project]
name = "keyboard-maestro-mcp"
version = "1.0.0"
description = "MCP server that drives Keyboard Maestro on macOS — macros, variables, triggers, hotkeys, and actions through the KM Engine."
requires-python = ">=3.10"
authors = [
    {name = "Agent_1", email = "noreply@anthropic.com"}
]
license = {text = "MIT"}
keywords = ["mcp", "keyboard-maestro", "automation", "macos", "ai-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.8.0",
    "dataclasses-json>=0.6.0",
    "python-dateutil>=2.8.0",
    "pyyaml>=6.0.2",
    "defusedxml>=0.7.1",
    # Field-weighted fuzzy ranker for km_search_actions. Pure C/Cython, no
    # ML model — feasible for the ~150-entry KM action catalog. Semantic
    # embeddings (fastembed) are a Phase 5b add-on, not required at runtime.
    "rapidfuzz>=3.0",
    # Quartz/CoreGraphics bindings — km_window_manager.get_screens uses
    # CGGetActiveDisplayList for real display bounds. Without this the
    # tool falls back to a "Default Display (Quartz unavailable)"
    # 1280x800 stub. Darwin-only — uv/pip on Linux will skip the install.
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.88.0",  # Property-based testing
    "factory-boy>=3.3.0",  # Test data generation
]
[project.scripts]
km-mcp-server = "src.server:main"

[project.urls]
Homepage = "https://github.com/anthropics/keyboard-maestro-mcp"
Repository = "https://github.com/anthropics/keyboard-maestro-mcp.git"
Issues = "https://github.com/anthropics/keyboard-maestro-mcp/issues"
Documentation = "https://github.com/anthropics/keyboard-maestro-mcp/blob/main/README.md"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "hypothesis>=6.88.0",
    "psutil>=7.0.0",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

# Tool configurations

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    # "--cov-fail-under=15",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "property: marks tests as property-based tests",
    "security: marks tests as security-focused tests",
    "performance: marks tests as performance-focused tests",
]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings  
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "S",  # flake8-bandit (security)
]
ignore = [
    "E501", # line too long (black handles this)
    "S101", # assert used (OK in tests)
    "S603", # subprocess call without shell=True (intentional)
    "S311", # Standard pseudo-random generators (OK for simulation/testing)
    "S314", # XML parsing (using defusedxml imports)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "ARG", "SIM"]
"src/core/contracts.py" = ["S101"]  # Contracts use assertions intentionally
"src/server/tools/**/*" = ["ARG"]  # MCP tools have ctx parameters for interface consistency

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
files = ["src"]
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "fastmcp.*",
    "hypothesis.*",
    "factory_boy.*",
    "AppKit.*",
    "ApplicationServices.*",
    "Quartz.*",
    "watchdog.*",
    "rapidfuzz.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/tests",
    "/.pre-commit-config.yaml",
]
